CRUD for HelloWorld and an Entry Serializer
